examples/c/negative/unterminated_string.pc
int main() { puts("missing); return 0; }
